--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 			padding: 10px;
 			text-align: center;
 		}
+		.image {
+			max-width: 100%;
+			height: auto;
+		}
 	</style>
 	<script>
 		function updateText() {
@@ -81,15 +85,18 @@
 		<form>
 			<label for="option1">
 				<input type="checkbox" id="option1" name="option1" value="option1" onchange="updateText()">
-				Option 1
+				Option 1 <br>
+				<img class="image" src="https://via.placeholder.com/150" alt="Option 1 Image">
 			</label><br>
 			<label for="option2">
 				<input type="checkbox" id="option2" name="option2" value="option2" onchange="updateText()">
-				Option 2
+				Option 2 <br>
+				<img class="image" src="https://via.placeholder.com/150" alt="Option 2 Image">
 			</label><br>
 			<label for="option3">
 				<input type="checkbox" id="option3" name="option3" value="option3" onchange="updateText()">
-				Option 3
+				Option 3 <br>
+				<img class="image" src="https://via.placeholder.com/150" alt="Option 3 Image">
 			</label><br>
 		</form>
 		<p id="selection"></p>
@@ -98,4 +105,3 @@
 		<p>&copy; 2023 My Website</p>
 	</footer>
 </body>
-</html>
